@@ -1,45 +1,38 @@
 plugins {
-    id("java")
-    id("application")
-    id("com.diffplug.spotless") version "7.0.4"
+    id 'application'
+    id 'com.diffplug.spotless' version '7.0.4'
 }
 
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(21))
+group = 'peekaboo'
+version = '0.1.0'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'de.gurkenlabs:litiengine:0.5.2'
+}
+
+application {
+    mainClass = 'peekaboo.PeekabooMain'
+}
+
+tasks.named('jar') {
+    manifest {
+        attributes(
+            'Main-Class': application.mainClass
+        )
     }
-}
 
-// give your project a name
-archivesBaseName = "Peek-A-Boo"
-version = "v0.0.1"
-mainClassName = "com.litiengine.peekaboo.Program"
+    // Get to run in here
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
 
 
 dependencies {
-    implementation 'net.java.jinput:jinput:2.0.10'
-    implementation 'de.gurkenlabs:litiengine'
+    implementation 'uk.co.caprica:vlcj:4.8.2'
 }
-
-tasks.withType(Copy).all {
-    duplicatesStrategy 'exclude'
-}
-
-sourceSets {
-    main.java.srcDir "src"
-    main.resources.srcDirs = ["sprites", "audio", "maps", "misc"]
-
-    // main.resources.includes = ["game.litidata"]
-}
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += ["--enable-preview"]
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs += ["--enable-preview"]
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += ["--enable-preview"]
-}
-
